# yam-toolkit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
include/: CMakeLists.txt
include/dv-toolkit/: CMakeLists.txt  toolkit.hpp
include/dv-toolkit/core/: core.hpp  slicer.hpp
include/dv-toolkit/core/base/: common.hpp  event.hpp  frame.hpp  imu.hpp  trigger.hpp
include/dv-toolkit/io/: reader.hpp  writer.hpp
include/dv-toolkit/simulation/: generator.hpp
python/: CMakeLists.txt  README.md
python/samples/: data_reader.py  data_slicing.py  data_viewer.py
python/src/: CMakeLists.txt  _lib_toolkit.cpp
python/src/dv_toolkit/: __init__.py
python/src/dv_toolkit/plot/: __init__.py  player.py
python/src/dv_toolkit/plot/tools/: __init__.py  func.py  go_player.py  mp_player.py
samples/: CMakeLists.txt
samples/core/: mono_camera_data.cpp  mono_camera_slicing.cpp
samples/io/: mono_file_reader.cpp  mono_file_writer.cpp
